# hive-browser

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  OVERVIEW.md  PRESENTATION_FULL.md  README.md  alembic.ini  docker-compose.yaml  docker-compose.yml  flake.nix  main.py  pyproject.toml  zerg_config.yaml
alembic/: env.py
alembic/versions/: 001_initial_schema.py  002_add_users_table.py  003_add_feedback_table.py  004_add_tool_approvals_table.py  005_parts_and_libraries.py  006_search_performance_indexes.py  007_add_enzymes_table.py  008_add_collections_table.py  009_add_cloning_steps.py  010_paradedb_search.py  011_add_sequence_has_history.py  012_drop_tool_approvals_table.py  013_add_skills_table.py  014_add_performance_indexes.py
assets/: app.css  app.js  index.html
config/: config.example.yaml
docker/: entrypoint.sh
extras/: alphabets.json
extras/skills/: cloning_history.md  codon_analysis.md  enzyme_selection.md  feature_extraction.md  full_report.md  gc_analysis.md  inventory.md  orf_analysis.md  part_instances.md  part_list.md  part_lookup.md  part_search.md  plasmid_profile.md  primer_analysis.md  protein_analysis.md  restriction_digest.md  restriction_sites.md  reverse_complement.md  sequence_alignment.md  sequence_comparison.md  sequence_search.md  similarity_search.md  tag_search.md  transcribe.md  translate.md
frontend/: package.json  vite.config.ts
frontend/src/: app.html
frontend/src/lib/: AlignWidget.svelte  BlastWidget.svelte  ChainSteps.svelte  Chat.svelte  CommandPalette.svelte  CompositionWidget.svelte  CopyButton.svelte  CopyableSequence.svelte  DataTable.svelte  DigestWidget.svelte  ExamineWidget.svelte  ExtractWidget.svelte  FeedbackModal.svelte  FormWidget.svelte  HistoryWidget.svelte  MessageBubble.svelte  (+19 more)
legacy/: Makefile  database.py  history.json  models.py
legacy/assets/: app.js  index.html
legacy/data/: sequence1.fasta  sequence2.txt
scripts/: extract_bio_data.py
src/: app.py  importer.py
src/hive/: __init__.py  agent.py  config.py  context.py  main.py  router.py  utils.py
src/zerg/: __init__.py  config.py  main.py
tests/: conftest.py  test_agent_llm.py  test_analysis_tools.py  test_chat_storage.py  test_cloning_enzymes.py  test_cloning_seq.py  test_collections.py  test_config.py  test_db.py  test_deps.py  test_ingest.py  test_libs_annotate.py  test_libs_classify.py  test_libs_enzymes.py  test_libs_loader.py  test_libs_match.py  test_llm_visibility.py  test_match_process.py  test_molbio_classify.py  test_molbio_codon.py  test_molbio_enzymes.py  test_molbio_orf.py  test_molbio_protein.py  test_molbio_seq.py  test_parsers.py  test_planner.py  test_primers.py  test_ps.py  test_router.py  test_sandbox.py  test_skill_library.py  test_skills.py  test_tool_rag.py  test_tools.py  test_watcher.py  test_websocket_helpers.py  test_workspace_serial.py
tests/fixtures/: test_plasmid.gb  test_sequence.fasta
(+206 files in other folders)
