[project]
name = "zerg-browser"
version = "0.1.0"
description = "Biological Data Browser"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "motor>=3.3.2",
    "pymongo>=4.6.0",
    "pydantic>=2.5.0",
    "python-multipart>=0.0.6",
    "fuzzywuzzy>=0.18.0",
    "python-Levenshtein>=0.23.0",
    "biopython>=1.82",
]
